<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.InputOTPActivity">

    <LinearLayout
        android:id="@+id/linearCode"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="18dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="@dimen/_79pxv"
            android:layout_width="9dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft_bluegray_405"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_arrowleft_bluegray_405" />

        <TextView
            android:ellipsize="end"
            android:gravity="start"
            android:id="@+id/txtMycodeis"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:fontFamily="@font/inter"
            android:textSize="46sp"
            android:text="@string/lbl_my_code_is" />

        <TextView
            android:ellipsize="end"
            android:id="@+id/inputPhone"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="41dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp">

            <EditText
                android:id="@+id/otp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"/>

            <EditText
                android:id="@+id/otp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/otp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/otp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/otp5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/otp6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end"
            android:gravity="center"
            android:id="@+id/verifyBTN"
            android:background="@drawable/frame_button"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/_14pxv"
            android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false"
            tools:text="@string/lbl_continue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_have_receive_otp"/>
            <TextView
                android:id="@+id/resendBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/resend_code"
                android:textColor="@color/blue_300"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>